--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,6 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         passphrase: ${{ secrets.SSH_PASSPHRASE }} 
         script: |
-          cd docker
-          docker-compose down
-          docker-compose pull
-          docker-compose up -d
+          cd /docker
+          docker-compose pull admin_container
+          docker-compose up -d --no-deps --force-recreate admin_container
